Revert "Update schedule handler/24"
