# backend/handler/request/user_req.go
@@ -9,8 +9,8 @@ type CreateUser struct {
 }
 
 type UpdateUser struct {
-	UserName      string `json:"name" validate:"required,min=1,max=30"`
-	ScheduleTitle string `json:"title" validate:"required,min=1,max=20,alphanum"`
+	UserName      string `json:"name" validate:"required,min=1,max=30,alphanum"`
+	ScheduleTitle string `json:"title" validate:"required,min=1,max=20"`
 }
 
 func (c *CreateUser) Validate() error {
