# swagger/reference/swagger.yaml
@@ -37,7 +37,7 @@ paths:
               examples:
                 example-1:
                   value:
-                    id: string
+                    id: string-uid
         '401':
           description: Unauthorized
       operationId: create-schedule
@@ -70,12 +70,26 @@ paths:
                   type: string
                   minLength: 1
                   maxLength: 20
+                year:
+                  type: number
+                  minimum: 2021
+                  maximum: 2025
+                month:
+                  type: number
+                  minimum: 1
+                  maximum: 12
+                day:
+                  type: number
+                  minimum: 1
+                  maximum: 31
                 start_time:
                   type: string
-                  example: '2021-07-28T15:00'
+                  example: '11:00'
+                  pattern: '^([01][0-9]|2[0-3]):[0-5][0-9]$'
                 end_time:
                   type: string
-                  example: '2021-07-28T15:00'
+                  pattern: '^([01][0-9]|2[0-3]):[0-5][0-9]$'
+                  example: '15:00'
                 place:
                   type: string
                   minLength: 1
@@ -90,6 +104,9 @@ paths:
                   format: uri
               required:
                 - emoji
+                - year
+                - month
+                - day
                 - start_time
                 - title
             examples:
@@ -97,21 +114,27 @@ paths:
                 value:
                   about: string
                   emoji: string
-                  start_time: '2021-07-28T15:00'
-                  end_time: '2021-07-28T16:30'
+                  year: 2021
+                  month: 8
+                  day: 20
+                  start_time: '14:15'
+                  end_time: '14:15'
                   place: string
                   title: string
                   url: 'http://example.com'
               最低限の要素のみの場合:
                 value:
                   emoji: string
-                  start_time: '2021-07-28T15:00'
+                  year: 2021
+                  month: 8
+                  day: 20
+                  start_time: '14:15'
                   title: string
         description: |-
           idを除いたスケジュールモデルを想定
           idはバックエンドで生成
           emojiに関しては作成時のフォームでは必須にはしない。埋められていない場合はフロントエンド側でランダムに一つ決めて送信する
-  '/schedule/{user}/{schedule}':
+  '/schedule/{schedule}':
     parameters:
       - schema:
           type: string
@@ -121,11 +144,6 @@ paths:
         in: path
         required: true
         description: スケジュールのuid
-      - schema:
-          type: string
-        name: user
-        in: path
-        required: true
     delete:
       summary: delete schedule
       tags:
@@ -162,15 +180,18 @@ paths:
               examples:
                 example-1:
                   value:
-                    id: 497f6eca-6276-4993-bfeb-53cbbbba6f08
+                    id: 6ba7b810-9dad-11d1-80b4-00c04fd430c8
                     about: string
                     emoji: string
-                    start_time: '2021-07-28T15:00'
-                    end_time: '2021-07-28T15:00'
+                    year: 2021
+                    month: 1
+                    day: 1
+                    start_time: '11:00'
+                    end_time: '17:00'
                     place: string
                     title: string
                     url: 'http://example.com'
-                    user_id: a169451c-8525-4352-b8ca-070dd449a1a5
+                    user_id: 6ba7b810-9dad-11d1-80b4-00c04fd430c8
         '404':
           description: Not Found
       description: スケジュールの情報を取得する
@@ -269,18 +290,16 @@ paths:
       tags:
         - user
         - sns
-  '/user/{title}/{id}':
+  '/user/{username}':
     parameters:
       - schema:
           type: string
-        name: title
+          maxLength: 30
+          minLength: 1
+        name: username
         in: path
         required: true
-      - schema:
-          type: string
-        name: id
-        in: path
-        required: true
+        description: ユーザー名
     get:
       summary: Get User Schedule by User ID
       tags:
@@ -383,8 +402,11 @@ components:
         - id: 497f6eca-6276-4993-bfeb-53cbbbba6f08
           about: string
           emoji: string
-          start_time: '2021-07-28T15:00'
-          end_time: '2021-07-28T15:00'
+          year: 2021
+          month: 1
+          day: 1
+          start_time: '11:00'
+          end_time: '17:00'
           place: string
           title: string
           url: 'http://example.com'
@@ -402,13 +424,27 @@ components:
         emoji:
           type: string
           minLength: 1
+        year:
+          type: number
+          minimum: 2021
+          maximum: 2025
+        month:
+          type: number
+          minimum: 1
+          maximum: 12
+        day:
+          type: number
+          minimum: 1
+          maximum: 31
         start_time:
           type: string
           minLength: 1
+          pattern: '^([01][0-9]|2[0-3]):[0-5][0-9]$'
           example: '11:00'
         end_time:
           type: string
           minLength: 1
+          pattern: '^([01][0-9]|2[0-3]):[0-5][0-9]$'
           example: '17:00'
         place:
           type: string
@@ -426,6 +462,9 @@ components:
           format: uuid
       required:
         - emoji
+        - year
+        - month
+        - day
         - start_time
         - title
         - user_id
